# bootes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  naro  pyproject.toml
bootes-sdk/: README.md  pyproject.toml  pytest.ini
bootes-sdk/examples/: basic_usage.py  fastapi_example.py
bootes-sdk/src/bootes/: __init__.py
bootes-sdk/src/bootes/sdk/: __init__.py
bootes-sdk/src/bootes/sdk/config/: config.py
bootes-sdk/src/bootes/sdk/exceptions/: __init__.py  exceptions.py
bootes-sdk/src/bootes/sdk/interfaces/: base.py
bootes-sdk/src/bootes/sdk/services/: __init__.py
bootes-sdk/tests/: __init__.py  conftest.py  test_config.py  test_crypto.py  test_exceptions.py  test_forex.py  test_integration.py  test_stock.py
dev/naro/: README.md  install.sh  naro  pyproject.toml  setup-tmux.sh  setup-uv.sh  uninstall.sh
dev/naro/autocomplete/: hatch-complete-bash.sh  hatch-complete-fish.sh  naro-complete-zsh.sh
dev/naro/src/orbis_naro/: __init__.py  main.py
dev/naro/src/orbis_naro/commands/: __init__.py  ci_commands.py  common_options.py  development_commands.py  maintenance_commands.py  monitor_commands.py  provider_commands.py  service_commands.py  testing_commands.py
dev/naro/src/orbis_naro/utils/: __init__.py  console.py  exceptions.py  path_utils.py  uv_utils.py
dev/naro/tests/: conftest.py
orbis-core/: Dockerfile  README.md  pyproject.toml
orbis-core/src/: settings.py
orbis-core/src/_shared/timezones/: timezone.py
orbis-core/src/api/: README.md  config.py  main.py
orbis-core/src/api/core_api/models/: __init__.py  common.py  crypto.py  economics.py  forex.py  stocks.py
orbis-core/src/api/core_api/routes/: __init__.py  crypto.py  economics.py  forex.py  stocks.py
orbis-core/src/api/core_api/services/: __init__.py  base.py  crypto.py  economics.py  forex.py  stocks.py
orbis-core/src/ui/: .dockerignore  .eslintrc.cjs  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json
orbis-core/src/ui/src/: App.tsx  main.tsx
orbis-core/src/ui/src/components/: Navbar.tsx
orbis-core/src/ui/src/hooks/: useApi.ts
orbis-core/src/ui/src/pages/: Dashboard.tsx  Indicators.tsx  Search.tsx
orbis-core/src/ui/src/services/: client.ts  crypto.ts  economics.ts  forex.ts  stocks.ts
orbis-core/src/utils/: session.py
orbis-core/tests/: test_main.py  test_stocks.py
orbis-sdk/: Dockerfile  README.md  pyproject.toml  pytest.ini
orbis-sdk/examples/: basic_usage.py  fastapi_example.py
orbis-sdk/src/orbis/: __init__.py
orbis-sdk/src/orbis/sdk/: __init__.py
orbis-sdk/src/orbis/sdk/config/: config.py
orbis-sdk/src/orbis/sdk/exceptions/: __init__.py  exceptions.py
orbis-sdk/src/orbis/sdk/interfaces/: __init__.py
orbis-sdk/src/orbis/sdk/services/: crypto.py  forex.py  stock.py
orbis-sdk/tests/: __init__.py  conftest.py  test_config.py  test_crypto.py  test_exceptions.py  test_forex.py  test_integration.py  test_stock.py
scripts/: setup-naro-links.sh
scripts/ci/: format-code.sh  run-all.sh  security-check.sh  test-code.sh  type-check.sh  validate-files.sh
