[project]
name = "orbis"
version = "0.1.0"
description = "Open-source investment terminal"
authors = [
    { name = "arxtrus orbis team", email = "orbis@arxtrus.com" }
]
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/arxtrus/orbis"
Repository = "https://github.com/arxtrus/orbis"
"Bug Reports" = "https://github.com/arxtrus/orbis/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "prek>=0.2.1",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # More lenient for monorepo
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
]