[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-click>=4.0.0",
    "myst-parser>=0.18.0",
]

[tool.uv.sources]
# Configure uv to use local development packages
orbis-provider-common = { path = "../../../providers/common", editable = true }
orbis-provider-manager = { path = "../../../providers/manager", editable = true }
orbis-provider-yahoo = { path = "../../../providers/yahoo", editable = true }

[project]
name = "orbis-naro"
version = "0.1.0"
description = "Orbis development environment management tool"
readme = "README.md"
authors = [
    {name = "arxtrus Development Team", email = "dev@arxtrus.com"}
]
maintainers = [
    {name = "arxtrus Development Team", email = "dev@arxtrus.com"}
]
keywords = ["orbis", "development", "cli", "devtools", "naro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "rich-click>=1.6.0",
    "docker>=6.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "GitPython>=3.1.0",
    "PyYAML>=6.0",
    "tabulate>=0.9.0",
    "colorama>=0.4.0",
    "psutil>=5.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-click>=4.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/orbis-dev/orbis"
Documentation = "https://docs.arxtrus.com/naro"
Repository = "https://github.com/orbis-dev/orbis"
"Bug Reports" = "https://github.com/orbis-dev/orbis/issues"

[project.scripts]
orbis-naro = "orbis_naro.main:main"
naro = "orbis_naro.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orbis_naro = ["templates/*.j2", "templates/*.yml", "files/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/orbis_naro"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]